@@ -1,6 +1,8 @@
 2009-11-30  GatoLoko  <GatoLoko@gmail.com>
 
- * instalador: arreglado (otra vez), esto no termina de funcionar nunca
+ * instalador: arreglado (otra vez), esto no termina de funcionar nunca.
+ * auxiliar.py: agregado el docstring a la funcion unidades.
+ * auxiliar.py: eliminadas varias lineas comentadas que ya no son necesarias
 
 2009-11-27  GatoLoko  <GatoLoko@gmail.com>
 
